Initial commit: Complete membership system with currency support
- Added currency selection to registration flow
- Implemented membership plans system (replacing locked savings)
- Added top-up functionality for existing memberships
- Created early closure system with 10% penalty
- Added daily interest calculation system
- Updated dashboard to show membership data
- Added comprehensive SQL functions and edge functions
- Implemented user currency preferences
- Added success modals and improved UX

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CapiRocket - Dashboard</title>
+  <title>tCentralFXvip - Dashboard</title>
   <link rel="stylesheet" href="/src/styles/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -257,7 +257,7 @@
               </div>
               <div class="skeleton h-3 w-full"></div>
             </div>
-            <!-- Locked Savings -->
+            <!-- Membership Plans -->
             <div id="locked-savings-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
               <div class="flex items-center gap-3 mb-3">
                 <div class="skeleton w-10 h-10 lg:w-8 lg:h-8 rounded-lg shrink-0"></div>
