--- a/deposit.html
+++ b/deposit.html
@@ -40,7 +40,7 @@
       <div class="p-6">
         <div class="flex items-center gap-3">
           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-white"><path d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"/><path d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"/><path d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"/><path d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"/></svg>
-          <span class="text-lg font-bold text-white whitespace-nowrap">CapiRocket</span>
+          <span class="text-lg font-bold text-white whitespace-nowrap">tCentralFXvip</span>
         </div>
       </div>
 
@@ -84,7 +84,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                 <span class="text-sm">Profile</span>
               </a>
-              <a href="https://www.capirocket.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
+              <a href="https://www.tCentralFXvip.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                 <span class="text-sm">Help & Support</span>
               </a>
@@ -111,7 +111,7 @@
         <div class="p-6">
           <div class="flex items-center gap-3">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-white"><path d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"/><path d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"/><path d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"/><path d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"/></svg>
-            <span class="text-lg font-bold text-white whitespace-nowrap">CapiRocket</span>
+            <span class="text-lg font-bold text-white whitespace-nowrap">tCentralFXvip</span>
           </div>
         </div>
 
@@ -154,7 +154,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                   <span class="text-sm">Profile</span>
                 </a>
-                <a href="https://www.capirocket.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
+                <a href="https://www.tCentralFXvip.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                   <span class="text-sm">Help & Support</span>
                 </a>
