--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CapiRocket - Create Account</title>
+  <title>tCentralFXvip - Create Account</title>
   <link rel="stylesheet" href="/src/styles/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -115,6 +115,13 @@
                 <label for="phone_number" class="block text-sm font-medium text-gray-300 mb-2">Phone Number</label>
                 <input type="tel" id="phone_number" name="phone_number" required class="w-full bg-gray-700 border border-gray-600 rounded-lg py-3 px-4 focus:ring-2 focus:ring-blue-400 focus:outline-none" placeholder="+1 (555) 123-4567">
               </div>
+            </div>
+            <div>
+              <label for="currency" class="block text-sm font-medium text-gray-300 mb-2">Account Currency</label>
+              <select id="currency" name="currency" required class="w-full bg-gray-700 border border-gray-600 rounded-lg py-3 px-4 focus:ring-2 focus:ring-blue-400 focus:outline-none">
+                <option value="">Select your preferred currency</option>
+              </select>
+              <p class="text-xs text-gray-400 mt-1">This will be the primary currency for your account balance and transactions.</p>
             </div>
             <div class="relative">
               <label for="password" class="block text-sm font-medium text-gray-300 mb-2">Password</label>
