--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -474,10 +474,10 @@
           </div>
 
           <div id="amount-input-container">
-            <label for="amount-input" class="block text-sm font-medium text-gray-400 mb-2">Amount (USD)</label>
+            <label for="amount-input" class="block text-sm font-medium text-gray-400 mb-2" id="amount-label">Amount</label>
             <div class="relative">
-                <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400">$</span>
-                <input type="text" id="amount-input" class="w-full border border-gray-600 bg-gray-900 text-white rounded-lg py-3 pl-7 pr-16 text-base focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="100.00">
+                <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400" id="amount-currency-symbol" style="min-width: 2.5rem;"></span>
+                <input type="text" id="amount-input" class="w-full border border-gray-600 bg-gray-900 text-white rounded-lg py-3 pl-12 pr-16 text-base focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="100.00">
                 <button type="button" id="max-amount-btn" class="absolute inset-y-0 right-0 hidden items-center pr-3 text-blue-400 hover:text-blue-300 font-medium text-sm">Max</button>
             </div>
           </div>
@@ -502,7 +502,7 @@
             </div>
              <div class="flex justify-between text-gray-400">
                 <span id="total-amount-label">You will spend:</span>
-                <span class="font-medium text-white" id="total-amount">$0.00</span>
+                <span class="font-medium text-white" id="total-amount">0.00</span>
             </div>
         </div>
 
