--- a/deposit.html
+++ b/deposit.html
@@ -21,6 +21,14 @@
     .scrollbar-hide::-webkit-scrollbar {
       display: none;
     }
+    
+    /* Prevent any pseudo-element content on currency symbols */
+    #bank-currency-symbol::before,
+    #bank-currency-symbol::after,
+    #crypto-currency-symbol::before,
+    #crypto-currency-symbol::after {
+      content: none !important;
+    }
 
     @media (max-width: 640px) {
       html {
@@ -289,15 +297,15 @@
                   <div class="relative">
                     <input type="number" min="10" step="0.01" id="crypto-amount" class="w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="0.00">
                     <div class="absolute inset-y-0 right-0 flex items-center pr-3">
-                      <span class="text-gray-400" id="crypto-currency-symbol">USD</span>
+                      <span class="text-gray-400" id="crypto-currency-symbol"></span>
                     </div>
                   </div>
-                  <p class="text-xs text-gray-400 mt-1" id="min-deposit-text">Minimum deposit: $10.00 USD</p>
+                  <p class="text-xs text-gray-400 mt-1" id="min-deposit-text">Minimum deposit:  10.00</p>
                 </div>
 
                 <div class="bg-yellow-900/30 border border-yellow-800 rounded-md p-4 text-sm text-yellow-200">
                   <ul class="list-disc pl-5 space-y-1">
-                    <li id="min-amount-warning">Minimum deposit: 10 USD</li>
+                    <li id="min-amount-warning">Minimum deposit:  10.00</li>
                     <li>Deposits typically confirm within 1 hour</li>
                     <li id="send-only-warning">Send only BTC to this address</li>
                   </ul>
@@ -310,17 +318,17 @@
                   <label class="block text-sm font-medium text-white mb-2">Amount</label>
                   <div class="relative">
                     <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-                      <span class="text-gray-400">$</span>
+                      <span class="text-gray-400" id="bank-currency-symbol" style="content: none !important; min-width: 2rem;"></span>
                     </div>
-                    <input type="number" min="10" step="0.01" id="bank-amount" class="pl-8 w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="0.00">
+                    <input type="number" min="10" step="0.01" id="bank-amount" class="pl-12 w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="0.00">
                   </div>
-                  <p class="text-xs text-gray-400 mt-1">Minimum deposit: $10.00</p>
+                  <p class="text-xs text-gray-400 mt-1" id="bank-min-deposit-text">Minimum deposit:  10.00</p>
                 </div>
 
                 <div class="bg-yellow-900/30 border border-yellow-800 rounded-md p-4 text-sm text-yellow-200">
                   <p class="mb-2 font-medium">Important Information:</p>
                   <ul class="list-disc pl-5 space-y-1">
-                    <li>Minimum deposit: $10.00</li>
+                    <li id="bank-important-min-deposit">Minimum deposit:  10.00</li>
                     <li>Bank transfers typically process within 1-3 business days</li>
                     <li>You will be contacted by our team to complete the transfer</li>
                   </ul>
@@ -424,7 +432,7 @@
           
           <div class="bg-yellow-900/30 border border-yellow-800 rounded-md p-4 text-sm text-yellow-200 w-full mb-6">
             <ul class="list-disc pl-5 space-y-1">
-              <li id="overlay-min-amount">Minimum deposit: $10.00</li>
+              <li id="overlay-min-amount">Minimum deposit:  10.00</li>
               <li>Deposits typically confirm within 1 hour</li>
               <li id="overlay-send-only">Send only the selected cryptocurrency</li>
             </ul>
