--- a/locked-savings.html
+++ b/locked-savings.html
@@ -478,9 +478,9 @@
                   <label for="modal-amount" class="block text-sm font-medium text-white mb-2">Investment Amount</label>
                   <div class="relative">
                       <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-                          <span class="text-gray-400">$</span>
+                          <span class="text-gray-400" id="modal-currency-symbol" style="min-width: 2.5rem;">$</span>
                       </div>
-                      <input type="number" id="modal-amount" name="amount" class="pl-8 w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="0.00" required>
+                      <input type="number" id="modal-amount" name="amount" class="pl-12 w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="0.00" required>
                   </div>
                   <p id="modal-amount-error" class="text-xs text-red-400 mt-1 h-3"></p>
               </div>
@@ -706,9 +706,9 @@
               <label for="topup-amount" class="block text-sm font-medium text-white mb-2">Top-up Amount</label>
               <div class="relative">
                   <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-                      <span class="text-gray-400">$</span>
+                      <span class="text-gray-400" id="topup-currency-symbol" style="min-width: 2.5rem;">$</span>
                   </div>
-                  <input type="number" id="topup-amount" name="amount" class="pl-8 w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="0.00" required>
+                  <input type="number" id="topup-amount" name="amount" class="pl-12 w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400" placeholder="0.00" required>
               </div>
               <p id="topup-amount-error" class="text-xs text-red-400 mt-1 h-3"></p>
           </div>
