feat: initial commit

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -7,46 +7,59 @@
   <link rel="stylesheet" href="/src/styles/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <style>
     body {
-      font-family: 'IBM Plex Sans', sans-serif;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
+      font-synthesis: none;
+      text-rendering: optimizeLegibility;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+    .btn-primary {
+      background-color: #009296;
+      color: white;
+    }
+    .btn-primary:hover {
+      background-color: #007a7e;
+    }
+    .btn-primary:disabled {
+      background-color: #a0a0a0;
+      cursor: not-allowed;
     }
     .otp-input {
       width: 3rem; height: 3.5rem; text-align: center; font-size: 1.25rem;
-      font-weight: 600; border: 1px solid #4b5563; background-color: #374151;
-      color: white; border-radius: 0.5rem; transition: all 0.2s ease-in-out;
+      font-weight: 600; border: 1px solid #d1d5db; background-color: #f9fafb;
+      color: #111827; border-radius: 0.5rem; transition: all 0.2s ease-in-out;
     }
     .otp-input:focus {
-      outline: none; border-color: #60a5fa; box-shadow: 0 0 0 2px rgba(96, 165, 250, 0.2);
+      outline: none; border-color: #009296; box-shadow: 0 0 0 2px rgba(0, 146, 150, 0.2);
     }
   </style>
   <script type="module" src="/src/js/forgot-password.js"></script>
 </head>
-<body class="bg-gray-900 text-white">
+<body class="bg-white text-gray-900">
   <div class="min-h-screen flex items-center justify-center p-4">
     <div class="max-w-md w-full">
-      <div class="flex justify-center mb-8">
-        <div class="flex items-center gap-3">
-          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-white"><path d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"/><path d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"/><path d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"/><path d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"/></svg>
-          <span class="text-2xl font-bold text-white">CapiRocket</span>
-        </div>
+      <div class="flex justify-center items-center mb-0">
+        <img src="/public/logo.webp" alt="tCentralFXvip Logo" class="h-44 w-auto">
+        <span class="text-2xl font-bold text-[#009296] italic -ml-5" style="font-style: italic;">VIP</span>
       </div>
       
-      <div class="bg-gray-800 rounded-2xl p-6 sm:p-8 shadow-lg">
+      <div class="bg-white border border-gray-200 rounded-2xl p-6 sm:p-8 shadow-lg">
         <!-- Step 1: Email Form -->
         <div id="email-step">
-          <div class="text-center mb-8">
-            <h2 class="text-2xl font-bold text-white mb-2">Forgot Password</h2>
-            <p class="text-gray-400">Enter your email to receive a verification code.</p>
+          <div class="text-center mb-2">
+            <h2 class="text-2xl font-bold text-gray-900 mb-2">Forgot Password</h2>
+            <p class="text-gray-600">Enter your email to receive a verification code.</p>
           </div>
           <form id="email-form" class="space-y-6">
             <div>
-              <label for="email" class="block text-sm font-medium text-gray-300 mb-2">Email Address</label>
-              <input type="email" id="email" name="email" required class="w-full bg-gray-700 border border-gray-600 rounded-lg py-3 px-4 focus:ring-2 focus:ring-blue-400 focus:outline-none" placeholder="you@example.com">
+              <label for="email" class="block text-sm font-medium text-gray-700 mb-2">Email Address</label>
+              <input type="email" id="email" name="email" required class="w-full bg-gray-50 border border-gray-300 rounded-lg py-3 px-4 text-gray-900 focus:ring-2 focus:ring-[#009296] focus:border-[#009296] focus:outline-none" placeholder="you@example.com">
             </div>
-            <button type="submit" id="email-submit-btn" class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors flex justify-center items-center disabled:bg-blue-400 disabled:cursor-not-allowed">
+            <button type="submit" id="email-submit-btn" class="w-full btn-primary py-3 px-4 rounded-lg font-semibold transition-colors flex justify-center items-center">
               <span class="btn-text">Send Code</span>
               <svg class="animate-spin h-5 w-5 text-white hidden btn-spinner" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                 <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -59,8 +72,8 @@
         <!-- Step 2: OTP Form -->
         <div id="otp-step" class="hidden">
            <div class="text-center">
-            <h3 class="text-xl font-bold text-white">Enter Verification Code</h3>
-            <p class="text-gray-400 mt-2 mb-4">A code has been sent to <br><strong id="verification-email" class="font-medium text-white">you@example.com</strong></p>
+            <h3 class="text-xl font-bold text-gray-900">Enter Verification Code</h3>
+            <p class="text-gray-600 mt-2 mb-4">A code has been sent to <br><strong id="verification-email" class="font-medium text-gray-900">you@example.com</strong></p>
           </div>
           <form id="otp-form" class="space-y-6">
             <div class="flex justify-center gap-3">
@@ -71,7 +84,7 @@
               <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
               <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
             </div>
-            <button type="submit" id="otp-submit-btn" class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors flex justify-center items-center disabled:bg-blue-400 disabled:cursor-not-allowed">
+            <button type="submit" id="otp-submit-btn" class="w-full btn-primary py-3 px-4 rounded-lg font-semibold transition-colors flex justify-center items-center">
               <span class="btn-text">Verify Code</span>
               <svg class="animate-spin h-5 w-5 text-white hidden btn-spinner" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                 <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -79,7 +92,7 @@
               </svg>
             </button>
             <div class="text-center">
-                <button type="button" id="resend-otp-btn" class="text-sm text-blue-400 hover:underline">Resend Code</button>
+                <button type="button" id="resend-otp-btn" class="text-sm text-[#009296] hover:underline">Resend Code</button>
             </div>
           </form>
         </div>
@@ -87,19 +100,19 @@
         <!-- Step 3: Reset Password Form -->
         <div id="reset-password-step" class="hidden">
           <div class="text-center mb-8">
-            <h2 class="text-2xl font-bold text-white mb-2">Set New Password</h2>
-            <p class="text-gray-400">Your new password must be different from the previous one.</p>
+            <h2 class="text-2xl font-bold text-gray-900 mb-2">Set New Password</h2>
+            <p class="text-gray-600">Your new password must be different from the previous one.</p>
           </div>
           <form id="reset-password-form" class="space-y-6">
             <div>
-              <label for="new-password" class="block text-sm font-medium text-gray-300 mb-2">New Password</label>
-              <input type="password" id="new-password" name="new-password" required class="w-full bg-gray-700 border border-gray-600 rounded-lg py-3 px-4 focus:ring-2 focus:ring-blue-400 focus:outline-none" placeholder="••••••••">
+              <label for="new-password" class="block text-sm font-medium text-gray-700 mb-2">New Password</label>
+              <input type="password" id="new-password" name="new-password" required class="w-full bg-gray-50 border border-gray-300 rounded-lg py-3 px-4 text-gray-900 focus:ring-2 focus:ring-[#009296] focus:border-[#009296] focus:outline-none" placeholder="••••••••">
             </div>
             <div>
-              <label for="confirm-password" class="block text-sm font-medium text-gray-300 mb-2">Confirm New Password</label>
-              <input type="password" id="confirm-password" name="confirm-password" required class="w-full bg-gray-700 border border-gray-600 rounded-lg py-3 px-4 focus:ring-2 focus:ring-blue-400 focus:outline-none" placeholder="••••••••">
+              <label for="confirm-password" class="block text-sm font-medium text-gray-700 mb-2">Confirm New Password</label>
+              <input type="password" id="confirm-password" name="confirm-password" required class="w-full bg-gray-50 border border-gray-300 rounded-lg py-3 px-4 text-gray-900 focus:ring-2 focus:ring-[#009296] focus:border-[#009296] focus:outline-none" placeholder="••••••••">
             </div>
-            <button type="submit" id="reset-submit-btn" class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors flex justify-center items-center disabled:bg-blue-400 disabled:cursor-not-allowed">
+            <button type="submit" id="reset-submit-btn" class="w-full btn-primary py-3 px-4 rounded-lg font-semibold transition-colors flex justify-center items-center">
               <span class="btn-text">Set New Password</span>
               <svg class="animate-spin h-5 w-5 text-white hidden btn-spinner" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                 <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -110,9 +123,9 @@
         </div>
         
         <div class="mt-8 text-center">
-          <p class="text-gray-400">
+          <p class="text-gray-600">
             Remember your password? 
-            <a href="login.html" class="font-medium text-blue-400 hover:text-blue-300">Log In</a>
+            <a href="login.html" class="font-medium text-[#009296] hover:text-[#007a7e]">Log In</a>
           </p>
         </div>
       </div>
