feat: initial commit

--- a/locked-savings.html
+++ b/locked-savings.html
@@ -64,6 +64,7 @@
       <div class="p-6">
         <div class="flex items-center justify-center">
           <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
         </div>
       </div>
 
@@ -133,6 +134,7 @@
         <div class="p-6">
           <div class="flex items-center justify-center">
             <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
           </div>
         </div>
 
