--- a/withdrawal.html
+++ b/withdrawal.html
@@ -43,7 +43,8 @@
       <!-- Logo -->
       <div class="p-6">
         <div class="flex items-center justify-center">
-          <img src="/public/logo.webp" alt="tCentralFX VIPvip Logo" class="h-16 w-auto">
+          <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
         </div>
       </div>
 
@@ -112,7 +113,8 @@
         <!-- Logo -->
         <div class="p-6">
           <div class="flex items-center justify-center">
-            <img src="/public/logo.webp" alt="tCentralFX VIPvip Logo" class="h-16 w-auto">
+            <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
           </div>
         </div>
 
