--- a/profile.html
+++ b/profile.html
@@ -42,6 +42,7 @@
       <div class="p-6">
         <div class="flex items-center justify-center">
           <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
         </div>
       </div>
 
@@ -111,6 +112,7 @@
         <div class="p-6">
           <div class="flex items-center justify-center">
             <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
           </div>
         </div>
 
