--- a/transaction-history.html
+++ b/transaction-history.html
@@ -35,6 +35,7 @@
       <div class="p-6">
         <div class="flex items-center justify-center">
           <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
         </div>
       </div>
       <div class="flex-1 px-4 overflow-y-auto scrollbar-hide">
